@@ -49,6 +49,11 @@ Post-v2.7.0
    - Fedora Packaging:
      * OVN services are no longer restarted automatically after upgrade.
    - Add --cleanup option to command 'ovs-appctl exit' (see ovs-vswitchd(8)).
+   - L3 tunneling:
+     * Add "layer3" options for tunnel ports that support non-Ethernet (L3)
+       payload (GRE).
+     * Transparently pop and push Ethernet headers at transmit/reception
+       of packets to/from L3 tunnels.
 
 v2.7.0 - 21 Feb 2017
 ---------------------
